--- a/pages/fav.html
+++ b/pages/fav.html
@@ -21,19 +21,19 @@
 
                 <ul class="nav-links">
                     <li>
-                        <a href="#">
+                        <a href="./home.html">
                             <i class="fa-solid fa-house"></i>
                             <span>Home</span>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="./contribute.html">
                             <i class="fa-solid fa-users"></i>
                             <span>Contribute</span>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="./places.html">
                             <i class="fa-solid fa-map"></i>
                             <span>Places</span>
                         </a>
