--- a/pages/home.html
+++ b/pages/home.html
@@ -1,23 +1,169 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="description"
-        content="Laptop friendly place is an app where you can get access to places that help you stay productive outdoor.">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="Map, Cafes for my pc, remote work">
-
-    <title>Laptop friendly places</title>
-    <link href="css/style.css" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/4137d3c4c5.js" crossorigin="anonymous"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>LFP Dashboard</title>
+  <link rel="stylesheet" href="../css/style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
+  <style>
+    /* Center the overlay button on the map */
+    .map-overlay {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      z-index: 1000;
+    }
+    .preview-map {
+      position: relative;
+      height: 400px;
+      border-radius: 12px;
+    }
+    #homeMap {
+      width: 100%;
+      height: 100%;
+      border-radius: 12px;
+    }
+  </style>
 </head>
-
 <body>
-    <!-- the side bar will be here -->
-    
+
+<!-- Header -->
+<header class="main-header">
+  <div class="header-container">
+    <div class="header-logo">
+      <img src="../assets/images/logo.svg" alt="LFP Logo">
+      <span>LFP</span>
+    </div>
+    <div class="header-search">
+      <input type="text" placeholder="Search places...">
+      <i class="fa fa-search"></i>
+    </div>
+  </div>
+</header>
+
+<div class="container">
+
+  <!-- Sidebar -->
+  <nav class="sidebar">
+    <ul class="nav-links">
+      <li class="active">
+        <a href="home.html" title="Home"><i class="fa-solid fa-house"></i></a>
+      </li>
+      <li>
+        <a href="contribute-location.html" title="Contribute"><i class="fa-solid fa-users"></i></a>
+      </li>
+      <li>
+        <a href="places.html" title="Places"><i class="fa-solid fa-map"></i></a>
+      </li>
+      <li>
+        <a href="fav.html" title="Favorite"><i class="fa-regular fa-heart"></i></a>
+      </li>
+    </ul>
+    <div class="sidebar-bottom">
+  <i id="themeToggle" class="fa-regular fa-moon"></i>
+</div>
+
+  </nav>
+
+  <!-- Main Content -->
+  <main class="main">
+    <div class="stats">
+      <div class="card">
+        <i class="fa-solid fa-map"></i>
+        <div class="card-content">
+          <h3>Total places</h3>
+          <p>1,890</p>
+        </div>
+      </div>
+      <div class="card">
+        <i class="fa-solid fa-plus-circle"></i>
+        <div class="card-content">
+          <h3>New added</h3>
+          <p>1,880</p>
+        </div>
+      </div>
+      <div class="card">
+        <i class="fa-solid fa-people-group"></i>
+        <div class="card-content">
+          <h3>Contributors</h3>
+          <p>50</p>
+        </div>
+      </div>
+    </div>
+
+    <h2 class="title">Places around your area</h2>
+
+    <div class="map-section">
+      <div class="map-container preview-map">
+        <div id="homeMap"></div>
+        <div class="map-overlay">
+          <a href="map-view.html" class="view-btn">View more</a>
+        </div>
+      </div>
+
+      <div class="places-sidebar">
+        <div class="places-category">
+          <div class="category-header"><i class="fa-solid fa-location-dot"></i><span>Total places</span></div>
+          <span class="category-count">50</span>
+        </div>
+        <div class="places-category">
+          <div class="category-header"><i class="fa-solid fa-mug-saucer"></i><span>Cafe</span></div>
+          <span class="category-count">5</span>
+        </div>
+        <div class="places-category">
+          <div class="category-header"><i class="fa-solid fa-hotel"></i><span>Hotel</span></div>
+          <span class="category-count">2</span>
+        </div>
+      </div>
+    </div>
+
+  </main>
+</div>
+
+<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+<script>
+const homeMap = L.map("homeMap", {
+  center: [9.03, 38.74],
+  zoom: 13,
+  zoomControl: false,
+  dragging: false,
+  scrollWheelZoom: false,
+  doubleClickZoom: false,
+  boxZoom: false,
+  keyboard: false,
+  tap: false
+});
+
+L.tileLayer("https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png", {
+  attribution: "&copy; OpenStreetMap contributors"
+}).addTo(homeMap);
+
+
+L.marker([9.0365, 38.7612]).addTo(homeMap);
+</script>
+<script>
+const toggleBtn = document.getElementById("themeToggle");
+
+// Load saved mode
+if (localStorage.getItem("theme") === "dark") {
+  document.body.classList.add("dark");
+  toggleBtn.classList.replace("fa-moon", "fa-sun");
+}
+
+toggleBtn.addEventListener("click", () => {
+  document.body.classList.toggle("dark");
+
+  const isDark = document.body.classList.contains("dark");
+  toggleBtn.classList.toggle("fa-moon", !isDark);
+  toggleBtn.classList.toggle("fa-sun", isDark);
+
+  localStorage.setItem("theme", isDark ? "dark" : "light");
+});
+</script>
 
 </body>
-
 </html>
